kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: petclinic

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:

    metadata:
      labels:
        app: mysql

    spec:

      containers:

      - name: mysql

        image: saikumaar/mysql:8.0
        ports:

        - containerPort: 3306

        volumeMounts:

        - name: mysql-storage
          mountPath: /var/lib/mysql

      volumes:

      - name: mysql-storage

        persistentVolumeClaim:
          claimName: mysql-pvc
