kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: petclinic

spec:

  selector:
    app: frontend

  ports:

  - port: 80

    targetPort: 80

  type: ClusterIP
