kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx

  rules:
  - host: petclinic.local

    http:

      paths:

      - path: /()(.*)
        pathType: ImplementationSpecific

        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific

        backend:
          service:
            name: backend
            port:
              number: 5000
